--- a/public/labs/penamaya/_config.yml
+++ b/public/labs/penamaya/_config.yml
@@ -37,6 +37,12 @@ theme: minima
 plugins:
   - jekyll-feed
 
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
+
 # defaults:
 #   - 
 #     scope:
