new COMING SOON page

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,8 @@
     "public": "public",
     "ignore": [
       "firebase.json",
+      "app",
+      "blog",
       "**/.*",
       "**/node_modules/**",
       "**/public/app/**",
